# quizbite

./: .gitignore  README.md  dev.mohfy.quizbite.json  meson.build
data/: dev.mohfy.quizbite.desktop.in  dev.mohfy.quizbite.gschema.xml  dev.mohfy.quizbite.metainfo.xml.in  dev.mohfy.quizbite.service.in  meson.build
data/icons/: meson.build
po/: LINGUAS  POTFILES.in  ar.po  it.po  meson.build
src/: __init__.py  main.py  meson.build  quizbite.gresource.xml  quizbite.in  shortcuts_dialog.blp
src/data/: __init__.py  db.py  flashcard_apkg.py  quiz_file.py
src/ui/: __init__.py  quiz_library.py  window.blp  window.py
src/ui/editor/: __init__.py  create_quiz.blp  create_quiz.py  create_quiz_support.py
src/ui/play_flashcard/: __init__.py  flashcard_match_player.py  flashcard_mode_dialog.py  flashcard_quiz_builder.py
src/ui/play_quiz/: __init__.py  quiz_player.py  quiz_session.py  score_view.py
src/ui/utils/: __init__.py  file_dialogs.py  pdfgenerator.py
